syntax = "proto3";

import "tracing/proto/tracing.proto";

option go_package = "sigmaos/hotel/proto";

service Prof {
  rpc GetProfiles(ProfRequest) returns (ProfResult);
}

message ProfRequest {
  repeated string hotelIds = 1;
  string locale = 2;
  SpanContextConfig spanContextConfig = 3;
}

message ProfileFlat {
  string  hotelId = 1;
  string  name = 2; 
  string  phoneNumber = 3;
  string  description = 4;
  string  streetNumber = 5;
  string  streetName = 6;
  string  city = 7;
  string  state = 8;
  string  country = 9;
  string  postalCode = 10;
  float   lat = 11;
  float   lon = 12;
}

message ProfResult {
  repeated ProfileFlat hotels = 1;
}
